--- a/style.css
+++ b/style.css
@@ -2,4 +2,76 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
+
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 80vh;
+  background: #fafafa;
+}
+
+.dropdown {
+  position: relative;
+  margin-top: 100px;
+  width: 300px;
+  height: 50px;
+}
+
+.dropdown input {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #fff;
+  border: none;
+  outline: none;
+  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.5);
+  padding: 12px 20px;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.arrow {
+  position: absolute;
+  top: 15px;
+  right: 20px;
+  font-size: 1.2em;
+  transition: 0.5s;
+  pointer-events: none;
+}
+
+.dropdown .options {
+  position: absolute;
+  top: 70px;
+  width: 100%;
+  background: #fff;
+  box-shadow: 0 30px 30px rgba(0, 0, 0, 0.5);
+  border-radius: 10px;
+  overflow: hidden;
+  transition: 0.5s;
+  display: none;
+}
+
+.dropdown .options.active {
+  display: block;
+}
+
+.dropdown .options div {
+  padding: 12px 20px;
+  cursor: pointer;
+}
+
+.dropdown .options div:hover {
+  background: #62baea;
+  color: #fff;
+}
+
+.dropdown .options div ion-icon {
+  position: relative;
+  top: 4px;
+  font-size: 1.2em;
+  margin-right: 5px;
 }
